crates/nuff_python_parser/src/snapshots/nuff_python_parser__lexer__tests__fstring_single_quote_escape_windows_eol.snap
---
source: crates/nuff_python_parser/src/lexer.rs
expression: fstring_single_quote_escape_eol(WINDOWS_EOL)
---
## Tokens
```
[
    FStringStart 0..2 (flags = F_STRING),
    FStringMiddle 2..20 (flags = F_STRING),
    FStringEnd 20..21 (flags = F_STRING),
    Newline 21..21,
]
```
