crates/nuff_python_parser/src/snapshots/nuff_python_parser__lexer__tests__fstring_with_multiline_format_spec.snap
---
source: crates/nuff_python_parser/src/lexer.rs
expression: lex_source(source)
---
## Tokens
```
[
    FStringStart 0..4 (flags = TRIPLE_QUOTED_STRING | F_STRING),
    FStringMiddle 4..6 (flags = TRIPLE_QUOTED_STRING | F_STRING),
    Lbrace 6..7,
    NonLogicalNewline 7..8,
    Identifier 12..13,
    Colon 13..14,
    FStringMiddle 14..16 (flags = TRIPLE_QUOTED_STRING | F_STRING),
    Rbrace 16..17,
    FStringMiddle 17..19 (flags = TRIPLE_QUOTED_STRING | F_STRING),
    FStringEnd 19..22 (flags = TRIPLE_QUOTED_STRING | F_STRING),
    Newline 22..23,
    FStringStart 23..27 (flags = TRIPLE_QUOTED_STRING | F_STRING),
    FStringMiddle 27..29 (flags = TRIPLE_QUOTED_STRING | F_STRING),
    Lbrace 29..30,
    NonLogicalNewline 30..31,
    Identifier 35..36,
    Colon 36..37,
    FStringMiddle 37..61 (flags = TRIPLE_QUOTED_STRING | F_STRING),
    Rbrace 61..62,
    FStringMiddle 62..64 (flags = TRIPLE_QUOTED_STRING | F_STRING),
    FStringEnd 64..67 (flags = TRIPLE_QUOTED_STRING | F_STRING),
    Newline 67..68,
]
```
