crates/nuff_python_parser/src/snapshots/nuff_python_parser__lexer__tests__fstring_with_nul_char.snap
---
source: crates/nuff_python_parser/src/lexer.rs
expression: lex_source(source)
---
## Tokens
```
[
    FStringStart 0..2 (flags = F_STRING),
    FStringMiddle 2..4 (flags = F_STRING),
    FStringEnd 4..5 (flags = F_STRING),
    Newline 5..5,
]
```
