crates/nuff_python_parser/src/snapshots/nuff_python_parser__lexer__tests__indentation_with_unix_eol.snap
---
source: crates/nuff_python_parser/src/lexer.rs
expression: indentation_with_eol(UNIX_EOL)
---
## Tokens
```
[
    Def 0..3,
    Identifier 4..7,
    Lpar 7..8,
    Rpar 8..9,
    Colon 9..10,
    Newline 10..11,
    Indent 11..15,
    Return 15..21,
    Int 22..24,
    Newline 24..25,
    NonLogicalNewline 25..26,
    Dedent 26..26,
]
```
