crates/nuff_python_parser/src/snapshots/nuff_python_parser__lexer__tests__indentation_with_windows_eol.snap
---
source: crates/nuff_python_parser/src/lexer.rs
expression: indentation_with_eol(WINDOWS_EOL)
---
## Tokens
```
[
    Def 0..3,
    Identifier 4..7,
    Lpar 7..8,
    Rpar 8..9,
    Colon 9..10,
    Newline 10..12,
    Indent 12..16,
    Return 16..22,
    Int 23..25,
    Newline 25..27,
    NonLogicalNewline 27..29,
    Dedent 29..29,
]
```
